@@ -1,15 +1,20 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf320
+{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf350
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;\f1\fnil\fcharset0 Calibri;}
 {\colortbl;\red255\green255\blue255;\red25\green54\blue109;}
 \margl1440\margr1440\vieww14840\viewh9500\viewkind0
 \pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\ql\qnatural\pardirnatural
 
-\f0\fs24 \cf0 Portfolio Theme 0.5.3\
+\f0\fs24 \cf0 Portfolio Theme 0.6\
+\
+- Made further updates for WordPress 3.1 compatibility\
+\
+Portfolio Theme 0.5.3\
 \
 - Fixed pagination issue when portfolio template was set to home page\
 - Added portfolio icon designed by Ben Dunkle, core WordPress designer, Field 2 design, field2.com\
 - Added french translations from Wolforg at http://www.wptrads.fr/portfolio-press/\
 - Updated description to link to demonstration video and french translation note\
+- Changed from type-portfolio.php to archive-portfolio.php in preparation for 3.1\
 \
 Portfolio Theme 0.5.2\
 \
